# praxis-eval

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  _typos.toml  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  pre-commit.yml  release.yml  test.yml
docs/: contributing.md  index.md  installation.md  package-lock.json  package.json  quickstart.md
docs/.vitepress/: config.mts
docs/api/: config.md  contracts.md  evaluate.md  policies.md
docs/benchmarks/: libero.md  metaworld.md  mshab.md  robocasa-gr1.md  robocasa.md  robomimic.md  simpler.md
docs/concepts/: evaluation-loop.md  local-vs-remote-policy.md  observations-and-actions.md  results-and-artifacts.md
docs/development/: adding-benchmarks.md
docs/examples/: local-custom-policy.md  local-random-policy.md  remote-policy.md  repository-examples.md
docs/scripts/: check_snippets.py
docs/setup/: mshab-runtime.md  robocasa-assets.md  simpler-runtime.md
examples/: README.md
examples/01_minimal_local_policy/: README.md  random_policy.py  run.py
examples/02_remote_policy/: README.md  policy_handler.py  run_eval.py  serve_policy.py
examples/03_custom_policy_adapter/: README.md  adapter.py  fake_model.py  run.py
examples/04_custom_benchmark_driver/: README.md  driver.py  run.py
examples/_support/: point_reach_driver.py
src/praxis_eval/: __init__.py  api.py  artifacts.py  contracts.py  managed_paths.py  metrics.py  processing.py  registry.py  types.py
src/praxis_eval/envs/: __init__.py  async_vector_env.py  builtins.py  eval_pool.py  eval_registry.py  factory.py  subprocess_runtime.py
src/praxis_eval/envs/libero/: __init__.py  config.py  env.py  eval.py  output.py  processor.py  registration.py  runtime.py  spaces.py  spec.py  tasks.py
src/praxis_eval/envs/metaworld/: __init__.py  _compat.py  config.py  env.py  eval.py  registration.py  runtime.py  spec.py  tasks.py
src/praxis_eval/envs/mshab/: __init__.py  eval.py  registration.py
src/praxis_eval/envs/robocasa/: __init__.py  config.py  datasets.py  env.py  eval.py  processor.py  runtime.py  state.py  tasks.py
src/praxis_eval/envs/robocasa_gr1/: __init__.py  config.py  env.py  eval.py  processor.py  registration.py  runtime.py  spec.py  tasks.py
src/praxis_eval/envs/robomimic/: __init__.py  config.py  env.py  eval.py  processor.py  runtime.py  state.py  tasks.py
src/praxis_eval/envs/simpler/: __init__.py  eval.py  registration.py
src/praxis_eval/evaluation/: __init__.py  artifacts.py  config.py  overrides.py  watchdog.py
src/praxis_eval/evaluation/sim/: __init__.py  adapters.py  diagnostics.py  metrics.py  rollout_compat.py  runner.py  wave_retry.py
src/praxis_eval/policies/: __init__.py  actions.py  local.py  remote.py
src/praxis_eval/scripts/: __init__.py  _conda_runtime.py  _dispatch.py  _package_sources.py  _verify_common.py  setup.py  setup_mshab.py  setup_robocasa.py  setup_robocasa_gr1.py  setup_simpler.py  verify.py  verify_libero.py  verify_metaworld.py  verify_mshab.py  verify_robocasa.py  verify_robocasa_gr1.py  verify_robomimic.py  verify_simpler.py
tests/: test_api.py  test_contracts.py  test_env_fork_contracts.py  test_examples.py  test_package_metadata.py  test_package_sources.py  test_setup_robocasa.py  test_verify_common.py  test_verify_scripts.py
tests/src/praxis_eval/envs/: __init__.py  test_env_factory.py  test_external_mshab.py  test_external_simpler.py  test_subprocess_runtime.py
tests/src/praxis_eval/envs/libero/: test_config.py  test_env.py
tests/src/praxis_eval/envs/metaworld/: __init__.py  test_metaworld_factory.py
tests/src/praxis_eval/envs/robocasa/: test_datasets.py  test_robocasa_factory.py
tests/src/praxis_eval/envs/robocasa_gr1/: test_robocasa_gr1.py
tests/src/praxis_eval/envs/robomimic/: __init__.py  test_robomimic_factory.py
tests/src/praxis_eval/evaluation/: __init__.py  test_config.py  test_eval_artifacts.py  test_overrides.py  test_phase_watchdog.py  test_sim_eval.py
